recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:4: error: not found: type Python
		return l.head :: Nil[Python]None
                                     ^